// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal.EventOwner.events fetches a user's events: user1 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToxOTU5MjAyODAwMDAwO2k6MTtpOjIyMTE3NTAwMDAwMDA7aToyO2k6MTQyMDQ5ODgwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
              "username": "lbrunet",
            },
            "id": "RXZlbnQ6ZXZlbnQ2",
            "title": "Event without registrations",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxOTIwNzU0ODAwMDAwO2k6MTtpOjE5MjA4NDEyMDAwMDA7aToyO2k6MTQyMDkzMDgwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
              "username": "lbrunet",
            },
            "id": "RXZlbnQ6ZXZlbnQxMQ==",
            "title": "ParisWeb2016",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal.EventOwner.events fetches a user's events: user2 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToxODk5MzI3NjAwMDAwO2k6MTtpOjE5NzA4NjMyMDAwMDA7aToyO2k6MTQyMDE1MzIwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
              "username": "sfavot",
            },
            "id": "RXZlbnQ6ZXZlbnQy",
            "title": "PHPTourDuFuture",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODYxOTE2NDAwMDAwO2k6MTtpOjE4NzI2MjY0MDAwMDA7aToyO2k6MTQyMDU4NTIwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
              "username": "sfavot",
            },
            "id": "RXZlbnQ6ZXZlbnQ3",
            "title": "Event 7",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxNTY1MTI4ODAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MjEwMTcyMDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
              "username": "sfavot",
            },
            "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
            "title": "EvenementPresentSansDateDeFin",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal.EventOwner.events fetches a user's events: user3 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToxOTcwNDMxMjAwMDAwO2k6MTtpOjIwNTc2MTI0MDAwMDA7aToyO2k6MTQyMDIzOTYwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
              "username": "xlacot",
            },
            "id": "RXZlbnQ6ZXZlbnQz",
            "title": "GrenobleWeb2015",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODY3MTg2ODAwMDAwO2k6MTtpOjE4ODM1OTkyMDAwMDA7aToyO2k6MTQyMDY3MTYwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
              "username": "xlacot",
            },
            "id": "RXZlbnQ6ZXZlbnQ4",
            "title": "Le droit de suite",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxNTQyMTUwMDAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MjExMDM2MDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
              "username": "xlacot",
            },
            "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
            "title": "evenementPasseSansDateDeFin",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal.EventOwner.events fetches a user's events: user5 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToxOTYxNzA4NDAwMDAwO2k6MTtpOjE5NjI0ODYwMDAwMDA7aToyO2k6MTQyMDA2NjgwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnQx",
            "title": "Event with registrations",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxOTIwNTgyMDAwMDAwO2k6MTtpOjE5MjA3NTQ4MDAwMDA7aToyO2k6MTQyMDg0NDQwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnQxMA==",
            "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODEyOTI0MDAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MzQyMzI4MDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3UmVmdXNlZA==",
            "title": "event Create By user with review refused",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODEyOTI0MDAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MzQyMzI4MDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnRSZXZpZXdSZWZ1c2VkV2l0aG91dENvbW1lbnQ=",
            "title": "evenement refusé, sans commentaire",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODA3NjUzNjAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0Mjg5NjI0MDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
            "title": "event Create By user with review approved",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxNzk5ODgxMjAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MjExOTAwMDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXdhaXRpbmc=",
            "title": "event Create By user with review in awaiting",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxMzkyMDczMjAwMDAwO2k6MTtpOjEzOTIxNTk2MDAwMDA7aToyO2k6MTQyMDQxMjQwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "id": "RXZlbnQ6ZXZlbnQ1",
            "title": "ParisWeb2014",
          },
        },
      ],
      "totalCount": 7,
    },
  },
}
`;

exports[`Internal.EventOwner.events fetches a user's events: userAdmin 1`] = `
Object {
  "node": Object {
    "events": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToxOTU2NTI0NDAwMDAwO2k6MTtpOjIzNzI3MTMyMDAwMDA7aToyO2k6MTQyMDMyNjAwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
              "username": "admin",
            },
            "id": "RXZlbnQ6ZXZlbnQ0",
            "title": "SymfonyLive Paris",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxOTE5ODkwODAwMDAwO2k6MTtpOjE5MjAzMjI4MDAwMDA7aToyO2k6MTQyMDc1ODAwMDAwMDt9",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
              "username": "admin",
            },
            "id": "RXZlbnQ6ZXZlbnQ5",
            "title": "Quelle complémentarité entre numérique et présentiel ?",
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aToxODI2MTQ2ODAwMDAwO2k6MTtpOi05MjIzMzcyMDM2ODU0Nzc1ODA4O2k6MjtpOjE0MjExOTAwMDAwMDA7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
              "username": "admin",
            },
            "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
            "title": "evenementFutureSansDateDeFin",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal.EventOwner.events should filter by \`APPROVED\` status   1`] = `
Object {
  "viewer": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
            "reviewStatus": "APPROVED",
            "title": "event Create By user with review approved",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
            "reviewStatus": "APPROVED",
            "title": "evenement créer par un utilisateur anglais avec review approved",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal.EventOwner.events should filter by \`AWAITING\` status   1`] = `
Object {
  "viewer": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXdhaXRpbmc=",
            "reviewStatus": "AWAITING",
            "title": "event Create By user with review in awaiting",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal.EventOwner.events should filter by \`DELETED\` status   1`] = `
Object {
  "viewer": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRPcmdhbml6YXRpb25EZWxldGVk",
            "reviewStatus": "DELETED",
            "title": "Event orga supprimé",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnREZWxldGVk",
            "reviewStatus": "DELETED",
            "title": "eventDeleted",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal.EventOwner.events should filter by \`REFUSED\` status   1`] = `
Object {
  "viewer": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3UmVmdXNlZA==",
            "reviewStatus": "REFUSED",
            "title": "event Create By user with review refused",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3UmVmdXNlZEVu",
            "reviewStatus": "REFUSED",
            "title": "evenement créer par un utilisateur anglais avec review refused",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRSZXZpZXdSZWZ1c2VkV2l0aG91dENvbW1lbnQ=",
            "reviewStatus": "REFUSED",
            "title": "evenement refusé, sans commentaire",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal.EventOwner.events should order by a given field and direction  1`] = `
Object {
  "viewer": Object {
    "events": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ1",
            "timeRange": Object {
              "endAt": "2014-02-12 00:00:00",
              "startAt": "2014-02-11 00:00:00",
            },
            "title": "ParisWeb2014",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ3",
            "timeRange": Object {
              "endAt": "2029-05-05 00:00:00",
              "startAt": "2029-01-01 00:00:00",
            },
            "title": "Event 7",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ4",
            "timeRange": Object {
              "endAt": "2029-09-09 00:00:00",
              "startAt": "2029-03-03 00:00:00",
            },
            "title": "Le droit de suite",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRPcmdhbml6YXRpb25EZWxldGVk",
            "timeRange": Object {
              "endAt": "2030-05-14 00:00:00",
              "startAt": "2030-05-12 00:00:00",
            },
            "title": "Event orga supprimé",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRQYXJ0aGVuYXk=",
            "timeRange": Object {
              "endAt": "2030-05-14 00:00:00",
              "startAt": "2030-05-12 00:00:00",
            },
            "title": "Parthenay party",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ5",
            "timeRange": Object {
              "endAt": "2030-11-08 00:00:00",
              "startAt": "2030-11-03 00:00:00",
            },
            "title": "Quelle complémentarité entre numérique et présentiel ?",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQxMA==",
            "timeRange": Object {
              "endAt": "2030-11-13 00:00:00",
              "startAt": "2030-11-11 00:00:00",
            },
            "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQxMQ==",
            "timeRange": Object {
              "endAt": "2030-11-14 00:00:00",
              "startAt": "2030-11-13 00:00:00",
            },
            "title": "ParisWeb2016",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQx",
            "timeRange": Object {
              "endAt": "2032-03-10 00:00:00",
              "startAt": "2032-03-01 00:00:00",
            },
            "title": "Event with registrations",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQy",
            "timeRange": Object {
              "endAt": "2032-06-15 00:00:00",
              "startAt": "2030-03-10 00:00:00",
            },
            "title": "PHPTourDuFuture",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQz",
            "timeRange": Object {
              "endAt": "2035-03-16 00:00:00",
              "startAt": "2032-06-10 00:00:00",
            },
            "title": "GrenobleWeb2015",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ2",
            "timeRange": Object {
              "endAt": "2040-02-02 00:00:00",
              "startAt": "2032-02-01 00:00:00",
            },
            "title": "Event without registrations",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnQ0",
            "timeRange": Object {
              "endAt": "2045-03-10 00:00:00",
              "startAt": "2032-01-01 00:00:00",
            },
            "title": "SymfonyLive Paris",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnREZWxldGVk",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2010-11-14 00:00:00",
            },
            "title": "eventDeleted",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2018-11-14 00:00:00",
            },
            "title": "evenementPasseSansDateDeFin",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2019-08-07 00:00:00",
            },
            "title": "EvenementPresentSansDateDeFin",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2020-02-17 00:00:00",
            },
            "title": "evenement cosmopolite",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRXaXRoT3duZXI=",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2020-05-28 00:00:00",
            },
            "title": "Evenement owned par un owner",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXdhaXRpbmc=",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-01-14 00:00:00",
            },
            "title": "event Create By user with review in awaiting",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-04-14 00:00:00",
            },
            "title": "event Create By user with review approved",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-04-14 00:00:00",
            },
            "title": "evenement créer par un utilisateur anglais avec review approved",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3UmVmdXNlZA==",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-06-14 00:00:00",
            },
            "title": "event Create By user with review refused",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3UmVmdXNlZEVu",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-06-14 00:00:00",
            },
            "title": "evenement créer par un utilisateur anglais avec review refused",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbnRSZXZpZXdSZWZ1c2VkV2l0aG91dENvbW1lbnQ=",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-06-14 00:00:00",
            },
            "title": "evenement refusé, sans commentaire",
          },
        },
        Object {
          "node": Object {
            "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
            "timeRange": Object {
              "endAt": null,
              "startAt": "2027-11-14 00:00:00",
            },
            "title": "evenementFutureSansDateDeFin",
          },
        },
      ],
      "totalCount": 25,
    },
  },
}
`;
